# konstitutionell-svensk-rag-llama-cpp

./: .env.example  .env.mcp  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  MCP_SERVER_SETUP.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  fix.sh  install.sh  pyproject.toml  requirements.txt  setup-dual-models.sh  simons  simons-ai  start.sh  start_rag_server.sh  start_system.sh  status.sh  stop.sh
.agent/workflows/: dev.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
cli/: .gitignore  CLAUDE.md  assets.py  boot_sequence.py  client.py  commands.py  config.py  gpu_panel.py  main.py  pyproject.toml  requirements.txt  tui_app.py  ui.py
cli/finetune/: README.md  prepare_data.py  train.py
cli/rag_cli/: config.py
cli/rag_cli/ui/: app.py  project_tree.py  widgets.py
cli/rag_cli/ui/assets/: loader.py
cli/tests/: test_rag_backend.py
data/: ULTIMATE_TRAINING.jsonl  code_patterns_training.jsonl  combined_training.jsonl  docs_qa_training.jsonl  extended_docs_training.jsonl  mega_training.jsonl  opus_code_quality.jsonl  opus_combined_training.jsonl  opus_complete_training.jsonl  opus_error_messages.jsonl  opus_final_training.jsonl  opus_full_training.jsonl  opus_master_training.jsonl  opus_more_patterns.jsonl  opus_teacher_batch1.jsonl  opus_testing_patterns.jsonl  opus_training_batch2.jsonl  opus_training_data.jsonl  opus_v2_training.jsonl  planner_role_training.jsonl  safety_training.jsonl  simons_real_world_training.jsonl  simons_validation_suite.py  super_mega_training.jsonl  training_data.jsonl  training_log.jsonl  visual_design_training.jsonl
docs/: AGENTS.md  API_ENDPOINT_CATALOG.md  ARCHITECTURE.md  BACKEND_STATUS.md  COMPREHENSIVE_RESEARCH_ANALYSIS.md  CONTEXTUAL_RETRIEVAL_IMPLEMENTATION.md  CURRENT_STATE_ANALYSIS.md  DEPLOYMENT.md  FAS3_INTEGRATION_REPORT.md  GITHUB_PUBLICATION_GUIDE.md  HANDOVER_AI_MODELS.md  HANDOVER_MOBILE_APP.md  IMPLEMENTATION_ROADMAP.md  MCP_REMOTE_SERVER_SPECIFICATION.md  MIGRATION_2026.md  MODEL_OPTIMIZATION.md  ORCHESTRATOR_DECOMPOSITION_ANALYSIS.md  README_DOCS_AND_RAG_INSTRUCTIONS.md  STEG2_1_VERIFICATION.md  STEG3_2_VERIFICATION.md  STEG4_1_4_2_VERIFICATION.md  VALIDATION_MINISTRAL3_2026-02-14.md  architecture-map.md  deep-research-by-chatgpt.md  deep-research-by-claude.md  guardrails.md  system-overview.md
eval/: chunk_quality_analysis.py  chunk_quality_report.md  eval_runner.py  ground_truth.json  retrieval_quality_eval.py  run_eval.py  sfs_test_queries.json
finetune/: README.md  prepare_data.py  train.py
indexers/: contextual_ingestor.py  migrate_to_bge_m3_v2.py
modelfiles/: Modelfile.devstral-openhands  Modelfile.qwen-sonnet  devstral-openhands.modelfile
rag_cli/: __init__.py  __main__.py  config.py
scrapers/: sfs_indexer.py  sfs_scraper.py  sfs_structure_parser.py  sfs_updater.py
scripts/: CHROMA_REPAIR_RUNBOOK.md  REINDEX_RUNBOOK.md  benchmark_ministral.py  build_bm25_index.py  build_fts5_index.py  build_parent_store.py  chalmers_full_harvest.py  check_docs_canonical.py  chroma_integrity_check.py  compare_retrieval_quality.py  convert_workflows_to_training.py  diva_batch3_full_harvest.py  diva_full_harvest_su.py  diva_full_harvest_uu.py  diva_full_kth_harvest.py  diva_oai_harvester.py  diva_umu_full_harvest.py  docs_to_qa.py  docs_to_qa_extended.py  eval_battery.py  eval_compound_splitting.py  export_chroma_to_jsonl.py  extract_code_patterns.py  finetune_lora.py  merge_lora.py  qwen-warmup.service  reindex_corpus.py  run_post_reindex_validation.sh  run_post_vacuum_gate.sh  scrape_lakemedelsverket.py  scrape_lantmateriet.py  scrape_sgu_final.py  smoke_test_pipeline.py  test_cli_import.py  train_cascade_agent.py  training_data.jsonl  warmup-qwen.sh  warmup-sven.sh
simons_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: constitutional-ai-backend.service  constitutional-ai-frontend.service  constitutional-ai-llm.service  mcp-server.service  simons-ai-backend.service  simons-ai-frontend.service
tests/: __init__.py  conftest.py  test_adaptive_retrieval.py  test_async_confirmation.py  test_citations_output.py  test_config.py  test_docs_canonical.py  test_filesystem_security.py  test_fs_tools.py  test_intent_classifier.py  test_intent_routing.py  test_models.py  test_openai_provider.py  test_profiles.py  test_query_rewriter.py  test_rag_fusion.py  test_router.py  test_shell_security.py  test_sidebar_collapsible.py  test_source_hierarchy.py  test_two_pass_retrieval.py
vibe_cli/: __init__.py  __main__.py  config.py
(+223 files in other folders)
