[project]
name = "rag-cli"
version = "0.1.0"
description = "Agentic AI coding assistant with Textual TUI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "textual>=0.85.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.9.0",
    "pygments>=2.18.0",
    "platformdirs>=4.3.0",
    "tomli>=2.0.0",
    "typer>=0.12.0",
    "aiofiles>=24.1.0",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
rag = "rag_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W293"]  # Line length and whitespace in multiline strings
